fix:Invoke Db.count got NullPointerException#6797